@@ -4,6 +4,10 @@ Changelog
 1.2.2 (unreleased)
 ------------------
 
+- Append "/view" to objects url if they are in the
+  'typesUseViewActionInListings' property.
+  [Julian Infanger]
+
 - Check the navigations markup in js. Only load the navigation
   children if there is the right markup.
   [Julian Infanger]
